crates/rattler_solve/tests/snapshots/backends__libsolv_c__impl-2.snap
---
source: crates/rattler_solve/tests/backends.rs
expression: err
---
Unsolvable(
    [
        "nothing provides requested asdfasdf",
    ],
)
