crates/rattler_solve/tests/snapshots/backends__libsolv_c__solve_dummy_repo_optional_depends_conflict_resolvo.snap
---
source: crates/rattler_solve/tests/backends.rs
expression: result.err().unwrap()
---
Unsolvable(
    [
        "No candidates were found for foo[with-oldbors] *.\n",
    ],
)
